Corrected spacing at the bottom of <h2>

--- a/theme/style.css
+++ b/theme/style.css
@@ -120,6 +120,7 @@ article {
 }
 h2 {
     font-size: 150%;
+    margin-bottom: 7px;
 }
 #system-message {
     border-radius: 10px;
